--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,9 +74,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: DancingScript
-       fonts:
-         - asset: fonts/DancingScript-VariableFont_wght.ttf
+    - family: StickNoBills
+      fonts:
+        - asset: fonts/StickNoBills.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
